Wrap images in divs to address sporadic column display issues

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -21,7 +21,6 @@ $delightful-blue: #4267b2;
   width: 100% !important;
   height: auto !important;
   margin-bottom: 4px;
-  display: block;
 }
 
 #photos-container img:hover {
